[gd_scene load_steps=3 format=2]

[ext_resource path="res://physics/ui/navigation/font_digital.tres" type="DynamicFont" id=1]
[ext_resource path="res://physics/ui/control_groups/control_groups.gd" type="Script" id=2]

[node name="ControlGroups" type="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -126.0
margin_top = 5.0
margin_right = -3.0
margin_bottom = 264.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = -0.053
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.519
margin_top = 5.0
margin_right = 9.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="VBox"]
margin_right = 128.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 24 )
custom_fonts/mono_font = ExtResource( 1 )
custom_fonts/bold_italics_font = ExtResource( 1 )
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[b]control groups[/b]"
text = "control groups"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group1" type="CheckButton" parent="VBox"]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 68.0
rect_min_size = Vector2( 84, 24 )
custom_fonts/font = ExtResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group2" type="CheckButton" parent="VBox"]
margin_top = 72.0
margin_right = 128.0
margin_bottom = 112.0
rect_min_size = Vector2( 84, 24 )
custom_fonts/font = ExtResource( 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group3" type="CheckButton" parent="VBox"]
margin_top = 116.0
margin_right = 128.0
margin_bottom = 156.0
rect_min_size = Vector2( 84, 24 )
custom_fonts/font = ExtResource( 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group4" type="CheckButton" parent="VBox"]
margin_top = 160.0
margin_right = 128.0
margin_bottom = 200.0
rect_min_size = Vector2( 84, 24 )
custom_fonts/font = ExtResource( 1 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group5" type="CheckButton" parent="VBox"]
margin_top = 204.0
margin_right = 128.0
margin_bottom = 244.0
rect_min_size = Vector2( 84, 24 )
custom_fonts/font = ExtResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.87
anchor_top = 0.41
anchor_right = 1.0
anchor_bottom = 0.834
margin_left = -890.88
margin_top = -246.0
margin_right = -1024.0
margin_bottom = -500.4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBox/Group1" to="." method="_on_group_pressed"]
[connection signal="pressed" from="VBox/Group2" to="." method="_on_group_pressed"]
[connection signal="pressed" from="VBox/Group3" to="." method="_on_group_pressed"]
[connection signal="pressed" from="VBox/Group4" to="." method="_on_group_pressed"]
[connection signal="pressed" from="VBox/Group5" to="." method="_on_group_pressed"]
